@@ -1,4 +1,4 @@
-<HTML>
+HTML>
 <BODY>
 
 <!-- FOOTER RIGHT "C-$CHAPTERPAGE" -->
@@ -26,6 +26,9 @@
 	<LI>The "strict HTML" mode now reports unresolved local
 	links.
 
+	<LI>Added support for HP LaserJet 5000 and Xerox DocuPrint
+	2000/100 printer commands.
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<LI>The command-line now allows --fontsize values from 4
@@ -41,6 +44,9 @@
 	to match the HTML specification.
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
+
+	<LI>Images did not default to align=bottom, and the
+	align=bottom line spacing calculation was incorrect.
 
 	<LI>Whitespace before a link was underlined.
 
